--- a/src/app/index.html
+++ b/src/app/index.html
@@ -10,12 +10,72 @@
     <header>
         <a href="#" class="logo">Logo</a>
         <ul>
-            <li><a href="#">Home</a></li>
+            <li><a class="active" href="#">Home</a></li>
             <li><a href="#">About</a></li>
             <li><a href="#">Works</a></li>
             <li><a href="#">Contact</a></li>
         </ul>
     </header>
+    <section>
+        <img src="../assets/stars.png" id="stars">
+        <img src="../assets/moon.png" id="moon">
+        <img src="../assets/mountains_behind.png" id="mountains_behind">
+        <h2 id="text">My Website</h2>
+        <a href="#sec" id="btn">Explore</a>
+        <img src="../assets/mountains_front.png" id="mountains_front">
+    </section>
+    <div class="sec" id="sec">
+        <h2>Parallax Scrolling Effects</h2>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+            dolore magna aliqua. Vulputate mi sit amet mauris. Felis donec et odio pellentesque diam volutpat commodo
+            sed. Leo integer malesuada nunc vel risus commodo. Fermentum iaculis eu non diam phasellus. Viverra
+            adipiscing at in tellus integer. Mi quis hendrerit dolor magna eget est lorem ipsum. Sit amet nulla facilisi
+            morbi tempus. Libero id faucibus nisl tincidunt eget nullam non. Pellentesque elit eget gravida cum sociis.
+            Quis eleifend quam adipiscing vitae proin sagittis nisl. Ut aliquam purus sit amet. Vel turpis nunc eget
+            lorem dolor sed viverra. Ornare aenean euismod elementum nisi quis eleifend quam adipiscing vitae. Malesuada
+            nunc vel risus commodo viverra maecenas. Auctor urna nunc id cursus metus aliquam eleifend. Felis imperdiet
+            proin fermentum leo vel orci. Integer quis auctor elit sed vulputate mi. Rhoncus aenean vel elit scelerisque
+            mauris.
+            <br><br>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+            et
+            dolore magna aliqua. Vulputate mi sit amet mauris. Felis donec et odio pellentesque diam volutpat commodo
+            sed. Leo integer malesuada nunc vel risus commodo. Fermentum iaculis eu non diam phasellus. Viverra
+            adipiscing at in tellus integer.
+            <br><br>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+            et
+            dolore magna aliqua. Vulputate mi sit amet mauris. Felis donec et odio pellentesque diam volutpat commodo
+            sed. Leo integer malesuada nunc vel risus commodo. Fermentum iaculis eu non diam phasellus. Viverra
+            adipiscing at in tellus integer.Mi quis hendrerit dolor magna eget est lorem ipsum. Sit amet nulla facilisi
+            morbi tempus. Libero id faucibus nisl tincidunt eget nullam non. Pellentesque elit eget gravida cum sociis.
+            Quis eleifend quam adipiscing vitae proin sagittis nisl. Ut aliquam purus sit amet. Vel turpis nunc eget
+            lorem dolor sed viverra. Ornare aenean euismod elementum nisi quis eleifend quam adipiscing vitae. Malesuada
+            nunc vel risus commodo viverra maecenas. Auctor urna nunc id cursus metus aliquam eleifend. Felis imperdiet
+            proin fermentum leo vel orci. Integer quis auctor elit sed vulputate mi. Rhoncus aenean vel elit scelerisque
+            mauris.
+        </p>
+    </div>
+    <script>
+        let stars = document.getElementById('stars');
+        let moon = document.getElementById('moon');
+        let mountains_behind = document.getElementById('mountains_behind');
+        let text = document.getElementById('text');
+        let btn = document.getElementById('btn');
+        let mountains_front = document.getElementById('mountains_front');
+        let header = document.querySelector('header')
+
+        window.addEventListener('scroll', function () {
+            let value = window.scrollY;
+            stars.style.left = value * 0.25 + 'px';
+            moon.style.top = value * 1.05 + 'px';
+            mountains_behind.style.top = value * 0.5 + 'px';
+            mountains_front.style.top = value * 0 + 'px';
+            text.style.marginRight = value * 4 + 'px';
+            text.style.marginTop = value * 1.5 + 'px';
+            btn.style.marginTop = value * 1.5 + 'px';
+            header.style.top = value * 0.5 + 'px';
+        })
+    </script>
 </body>
 
 </html>
