--- a/src/app/index.css
+++ b/src/app/index.css
@@ -27,6 +27,8 @@ header {
 }
 
 header .logo {
+    /* Скрыть */
+    visibility: hidden;
     color: #fff;
     font-weight: 700;
     text-decoration: none;
@@ -70,7 +72,7 @@ section {
     overflow: hidden;
 }
 
-section::before{
+section::before {
     content: '';
     position: absolute;
     bottom: 0;
@@ -108,7 +110,8 @@ section img#mountains_front {
     /* font-size: 1.5em; */
     z-index: 9;
 }
-#btn{
+
+#btn {
     text-decoration: none;
     display: inline-block;
     padding: 8px 30px;
@@ -119,17 +122,94 @@ section img#mountains_front {
     z-index: 9;
     transform: translateY(100px);
 }
-.sec{
+
+.sec {
     position: relative;
     padding: 100px;
     background-color: #1c0522;
 }
-.sec h2{
+.sec::after{
+    content: '';
+    padding: 0;
+    left: 0;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 55px;
+    background: linear-gradient(to top, #2b1055, transparent);
+    z-index: 1000;
+}
+
+.sec h2 {
     font-size: 3.5em;
     margin-bottom: 10px;
     color: #fff;
 }
-.sec p{
+
+.sec p {
     font-size: 1em;
     color: #fff;
+}
+
+
+
+footer {
+    position: relative;
+    width: 100%;
+    background: #2b1055;
+    min-height: 100px;
+    padding: 20px 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+footer .social_icon,
+footer .footer-menu {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 10px 0;
+    flex-wrap: wrap;
+}
+
+footer .social_icon li,
+footer .footer-menu li {
+    list-style: none;
+}
+
+footer .social_icon li a {
+    font-size: 2em;
+    color: #fff;
+    margin: 0 10px;
+    display: inline-block;
+    transition: 0.5s;
+}
+
+footer .social_icon li a:hover {
+    transform: translateY(-10px);
+}
+
+footer .footer-menu li a {
+    font-size: 1.2em;
+    color: #fff;
+    margin: 0 10px;
+    display: inline-block;
+    transition: 0.5s;
+    text-decoration: none;
+    opacity: 0.75;
+}
+
+footer .footer-menu li a:hover {
+    opacity: 1;
+}
+
+footer p {
+    color: #fff;
+    text-align: center;
+    margin-top: 15px;
+    margin-bottom: 10px;
+    font-size: 1.1em;
 }
