--- a/src/app/index.html
+++ b/src/app/index.html
@@ -13,7 +13,7 @@
             <li><a class="active" href="#">Home</a></li>
             <li><a href="#">About</a></li>
             <li><a href="#">Works</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="#contacts">Contact</a></li>
         </ul>
     </header>
     <section>
@@ -55,6 +55,26 @@
             mauris.
         </p>
     </div>
+
+
+    <footer id="contacts">
+        <ul class="social_icon">
+            <li><a href="https://github.com/Ilya-Begalko"><ion-icon name="logo-github"></ion-icon></a></li>
+            <li><a href="https://www.instagram.com/ilbglk/"><ion-icon name="logo-instagram"></ion-icon></a></li>
+            <li><a href="https://wa.me/89994537345"><ion-icon name="logo-whatsapp"></ion-icon></a></li>
+        </ul>
+        <ul class="footer-menu">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Works</a></li>
+            <li><a href="#contacts">Contact</a></li>
+        </ul>
+        <p>@ 2022 Ilya Begalko</p>
+    </footer>
+
+
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
     <script>
         let stars = document.getElementById('stars');
         let moon = document.getElementById('moon');
