--- a/src/app/index.css
+++ b/src/app/index.css
@@ -125,19 +125,8 @@ section img#mountains_front {
 
 .sec {
     position: relative;
-    padding: 100px;
+    padding: 25px 100px;
     background-color: #1c0522;
-}
-.sec::after{
-    content: '';
-    padding: 0;
-    left: 0;
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    height: 55px;
-    background: linear-gradient(to top, #2b1055, transparent);
-    z-index: 1000;
 }
 
 .sec h2 {
@@ -151,7 +140,41 @@ section img#mountains_front {
     color: #fff;
 }
 
+#works::after{
+    content: '';
+    padding: 0;
+    left: 0;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 55px;
+    background: linear-gradient(to top, #2b1055, transparent);
+    z-index: 1000;
+}
 
+#swiper{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-bottom: 60px;
+}
+#swiper .swiper {
+    width: 100%;
+    padding-top: 30px;
+    padding-bottom: 30px;
+  }
+
+  #swiper .swiper .swiper-slide {
+    background-position: center;
+    background-size: cover;
+    width: 300px;
+    height: 300px;
+  }
+
+  #swiper .swiper .swiper-slide img {
+    display: block;
+    width: 100%;
+  }
 
 footer {
     position: relative;
