--- a/src/app/index.html
+++ b/src/app/index.html
@@ -142,8 +142,8 @@
             },
         });
     </script>
-
-    <!--Scripts for footer  -->
+    
+    <!--Scripts for footer-icon  -->
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 
