add photo in about

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -28,34 +28,12 @@
 
     <div class="sec" id="about">
         <h2>About</h2>
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-            dolore magna aliqua. Vulputate mi sit amet mauris. Felis donec et odio pellentesque diam volutpat commodo
-            sed. Leo integer malesuada nunc vel risus commodo. Fermentum iaculis eu non diam phasellus. Viverra
-            adipiscing at in tellus integer. Mi quis hendrerit dolor magna eget est lorem ipsum. Sit amet nulla facilisi
-            morbi tempus. Libero id faucibus nisl tincidunt eget nullam non. Pellentesque elit eget gravida cum sociis.
-            Quis eleifend quam adipiscing vitae proin sagittis nisl. Ut aliquam purus sit amet. Vel turpis nunc eget
-            lorem dolor sed viverra. Ornare aenean euismod elementum nisi quis eleifend quam adipiscing vitae. Malesuada
-            nunc vel risus commodo viverra maecenas. Auctor urna nunc id cursus metus aliquam eleifend. Felis imperdiet
-            proin fermentum leo vel orci. Integer quis auctor elit sed vulputate mi. Rhoncus aenean vel elit scelerisque
-            mauris.
-            <br><br>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-            et
-            dolore magna aliqua. Vulputate mi sit amet mauris. Felis donec et odio pellentesque diam volutpat commodo
-            sed. Leo integer malesuada nunc vel risus commodo. Fermentum iaculis eu non diam phasellus. Viverra
-            adipiscing at in tellus integer.
-            <br><br>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-            et
-            dolore magna aliqua. Vulputate mi sit amet mauris. Felis donec et odio pellentesque diam volutpat commodo
-            sed. Leo integer malesuada nunc vel risus commodo. Fermentum iaculis eu non diam phasellus. Viverra
-            adipiscing at in tellus integer.Mi quis hendrerit dolor magna eget est lorem ipsum. Sit amet nulla facilisi
-            morbi tempus. Libero id faucibus nisl tincidunt eget nullam non. Pellentesque elit eget gravida cum sociis.
-            Quis eleifend quam adipiscing vitae proin sagittis nisl. Ut aliquam purus sit amet. Vel turpis nunc eget
-            lorem dolor sed viverra. Ornare aenean euismod elementum nisi quis eleifend quam adipiscing vitae. Malesuada
-            nunc vel risus commodo viverra maecenas. Auctor urna nunc id cursus metus aliquam eleifend. Felis imperdiet
-            proin fermentum leo vel orci. Integer quis auctor elit sed vulputate mi. Rhoncus aenean vel elit scelerisque
-            mauris.
-        </p>
+        <div class="box">
+            <div class="box-photo">
+                <img src="../assets/my-photo.jpg">
+                <h2>Ilya Begalko<br><span>Frontend Developer</span></h2>
+            </div>
+        </div>
     </div>
 
     <div class="sec" id="works">
