--- a/src/app/index.css
+++ b/src/app/index.css
@@ -19,7 +19,7 @@ header {
     top: 0;
     left: 0;
     width: 100%;
-    padding: 20px 100px;
+    padding: 2% 10%;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -140,7 +140,90 @@ section img#mountains_front {
     color: #fff;
 }
 
-#works::after{
+.box {
+    position: relative;
+    width: 300px;
+    height: 300px;
+    background-color: #1c0522;
+    border-radius: 50%;
+    overflow: hidden;
+}
+
+.box::before {
+    content: '';
+    position: absolute;
+    inset: -10px 100px;
+    background: linear-gradient(315deg, #00ccff, #d400d4);
+    transition: 0.5s;
+    animation: animate 4s linear infinite;
+}
+
+.box:hover::before {
+    inset: -20px 0px;
+}
+
+@keyframes animate {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+.box::after {
+    content: '';
+    position: absolute;
+    inset: 6px;
+    background: #162052;
+    border-radius: 50%;
+    z-index: 1;
+}
+
+.box-photo {
+    position: absolute;
+    inset: 30px;
+    border: 6px solid #1c0522;
+    z-index: 3;
+    border-radius: 50%;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.box-photo h2 {
+    position: relative;
+    font-size: 1.5em;
+    text-align: center;
+    font-weight: 600;
+    letter-spacing: 0.05em;
+    text-transform: uppercase;
+}
+
+.box-photo h2 span {
+    font-weight: 300;
+    font-size: 0.75em;
+}
+
+.box-photo img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    transition: 0.5s;
+    pointer-events: none;
+    z-index: 3;
+}
+
+.box:hover .box-photo img {
+    opacity: 0;
+}
+
+#works::after {
     content: '';
     padding: 0;
     left: 0;
@@ -152,29 +235,30 @@ section img#mountains_front {
     z-index: 1000;
 }
 
-#swiper{
+#swiper {
     display: flex;
     justify-content: center;
     align-items: center;
     padding-bottom: 60px;
 }
+
 #swiper .swiper {
     width: 100%;
     padding-top: 30px;
     padding-bottom: 30px;
-  }
+}
 
-  #swiper .swiper .swiper-slide {
+#swiper .swiper .swiper-slide {
     background-position: center;
     background-size: cover;
     width: 300px;
     height: 300px;
-  }
+}
 
-  #swiper .swiper .swiper-slide img {
+#swiper .swiper .swiper-slide img {
     display: block;
     width: 100%;
-  }
+}
 
 footer {
     position: relative;
