--- a/src/app/index.html
+++ b/src/app/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <header>
-        <a href="#" class="logo">Logo</a>
+        <a href="#" class="logo">Ilya Begalko</a>
         <ul>
             <li><a class="active" href="#">Home</a></li>
             <li><a href="#about">About</a></li>
@@ -21,7 +21,7 @@
         <img src="../assets/stars.png" id="stars">
         <img src="../assets/moon.png" id="moon">
         <img src="../assets/mountains_behind.png" id="mountains_behind">
-        <h2 id="text">My Website</h2>
+        <h2 id="text">My portfolio</h2>
         <a href="#about" id="btn">Explore</a>
         <img src="../assets/mountains_front.png" id="mountains_front">
     </section>
@@ -141,7 +141,7 @@
             moon.style.top = value * 1.05 + 'px';
             mountains_behind.style.top = value * 0.5 + 'px';
             mountains_front.style.top = value * 0 + 'px';
-            text.style.marginRight = value * 4 + 'px';
+            text.style.marginRight = value * 2 + 'px';
             text.style.marginTop = value * 1.5 + 'px';
             btn.style.marginTop = value * 1.5 + 'px';
             header.style.top = value * 0.5 + 'px';
