--- a/src/app/index.html
+++ b/src/app/index.html
@@ -28,10 +28,47 @@
 
     <div class="sec" id="about">
         <h2>About</h2>
-        <div class="box">
-            <div class="box-photo">
-                <img src="../assets/my-photo.jpg">
-                <h2>Ilya Begalko<br><span>Frontend Developer</span></h2>
+        <div class="info-block">
+            <div class="box">
+                <div class="box-photo">
+                    <img src="../assets/my-photo.jpg">
+                    <h2>Ilya Begalko<br><span>Frontend Developer</span></h2>
+                </div>
+            </div>
+            <div class="info">
+                <div class="card">
+                    <div class="card-img">
+                        <img src="../assets/education.png">
+                    </div>
+                    <div class="card-content">
+                        <div>
+                            <h3>Education</h3>
+                            <p>asldkadklfjdi</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-img">
+                        <img src="../assets/skill.png">
+                    </div>
+                    <div class="card-content">
+                        <div>
+                            <h3>Skill</h3>
+                            <p>asldkadklf</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-img">
+                        <img src="../assets/work.png">
+                    </div>
+                    <div class="card-content">
+                        <div>
+                            <h3>Work experience</h3>
+                            <p>asldkadklf</p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -120,7 +157,7 @@
             },
         });
     </script>
-    
+
     <!--Scripts for footer-icon  -->
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
