--- a/src/app/index.css
+++ b/src/app/index.css
@@ -124,11 +124,12 @@ section img#mountains_front {
     position: relative;
     padding: 25px 100px;
     background-color: #1c0522;
+    height: 100vh;
 }
 
 .sec h2 {
     font-size: 3.5em;
-    margin-bottom: 10px;
+    margin-bottom: 30px;
     color: #fff;
 }
 
@@ -137,10 +138,93 @@ section img#mountains_front {
     color: #fff;
 }
 
+.info-block {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.info {
+    position: relative;
+    width: 800px;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: nowrap;
+    margin: 20px;
+    padding: 20px 0;
+}
+
+.info .card {
+    position: relative;
+    height: 350px;
+    background: #162052;
+    display: flex;
+    width: 30%;
+    margin: 20px 0;
+    border-radius: 20px;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+}
+
+.info .card .card-img {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    background: rgba(255, 255, 255, 0.1);
+    backdrop-filter: blur(10px);
+    height: calc(100% - 20px);
+    width: calc(100% - 20px);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+    border-radius: 20px;
+    border: 1px solid #ffffff;
+    box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.1);
+    transition: 0.5s ease-in-out;
+    z-index: 1;
+}
+
+.info .card .card-img img {
+    width: 100px;
+    height: 100px;
+    filter: invert(1);
+    transition: 0.5s ease-in-out;
+}
+
+.info .card:hover .card-img {
+    height: 100px;
+    width: 100px;
+    left: -35px;
+    top: 70%;
+}
+
+.info .card:hover .card-img img {
+    max-width: 70px;
+    max-height: 70px;
+    opacity: 0.5;
+}
+
+.info .card .card-content {
+    position: relative;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    padding: 30px 50px;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+}
+
+.info .card .card-content h3 {
+    color: #fff;
+    margin-bottom: 5px;
+    font-size: 24px;
+}
+
 .box {
     position: relative;
-    width: 300px;
-    height: 300px;
+    width: 350px;
+    height: 350px;
     background-color: #1c0522;
     border-radius: 50%;
     overflow: hidden;
@@ -248,8 +332,8 @@ section img#mountains_front {
 #swiper .swiper .swiper-slide {
     background-position: center;
     background-size: cover;
-    width: 300px;
-    height: 300px;
+    width: 400px;
+    height: 400px;
 }
 
 #swiper .swiper .swiper-slide img {
