--- a/src/app/index.html
+++ b/src/app/index.html
@@ -43,7 +43,7 @@
                     <div class="card-content">
                         <div>
                             <h3>Education</h3>
-                            <p>asldkadklfjdi</p>
+                            <p>Omsk State Technical University, Omsk<br><br>SEPTEMBER 2018 - JUNE 2022</p>
                         </div>
                     </div>
                 </div>
@@ -54,7 +54,9 @@
                     <div class="card-content">
                         <div>
                             <h3>Skill</h3>
-                            <p>asldkadklf</p>
+                            <p>HTML+CSS, JavaScript, TypeScript, SASS, DOM, API, NodeJS, React, Angular, Git, NPM,
+                                YARN<br><br>
+                                Figma, Jira, Confluence</p>
                         </div>
                     </div>
                 </div>
@@ -65,7 +67,8 @@
                     <div class="card-content">
                         <div>
                             <h3>Work experience</h3>
-                            <p>asldkadklf</p>
+                            <p>Avtomatika-Service LLC, Omsk - Junior Frontend Developer<br><br>
+                                OCTOBER 2021 - PRESENT</p>
                         </div>
                     </div>
                 </div>
