--- a/src/app/index.css
+++ b/src/app/index.css
@@ -138,6 +138,10 @@ section img#mountains_front {
     color: #fff;
 }
 
+
+/* create relative */
+
+
 .info-block {
     display: flex;
     justify-content: space-between;
@@ -209,7 +213,7 @@ section img#mountains_front {
     right: 0;
     width: 100%;
     height: 100%;
-    padding: 30px 50px;
+    padding: 30px 20px;
     display: flex;
     justify-content: center;
     align-items: flex-start;
