--- a/src/app/index.html
+++ b/src/app/index.html
@@ -81,32 +81,59 @@
         <div id="swiper">
             <div class="swiper mySwiper">
                 <div class="swiper-wrapper">
+
                     <div class="swiper-slide">
-                        <img src="https://swiperjs.com/demos/images/nature-1.jpg" />
+                        <div class="swiper-slide-img">
+                            <img src="../assets/works/coach-app.jpg" />
+                        </div>
+                        <div class="swiper-slide-content">
+                            <h3>Coach<br><span>
+                                    Business card website written in JS for a fitness trainer.
+                                </span></h3>
+                        </div>
                     </div>
                     <div class="swiper-slide">
-                        <img src="https://swiperjs.com/demos/images/nature-2.jpg" />
+                        <div class="swiper-slide-img">
+                            <img src="../assets/works/Angular-chat.png" />
+                        </div>
+                        <div class="swiper-slide-content">
+                            <h3>Angular-chat
+                                <br> <span>
+                                    description
+                                </span>
+                            </h3>
+                        </div>
                     </div>
                     <div class="swiper-slide">
-                        <img src="https://swiperjs.com/demos/images/nature-3.jpg" />
+                        <div class="swiper-slide-img">
+                            <img src="../assets/works/ASP-app.jpg" />
+                        </div>
+                        <div class="swiper-slide-content">
+                            <h3>ASP<br><span>
+                                    Test task for Avtomatika-Service company. Written in Angular using the DevExtreme
+                                    library.
+                                </span></h3>
+                        </div>
                     </div>
                     <div class="swiper-slide">
-                        <img src="https://swiperjs.com/demos/images/nature-4.jpg" />
+                        <div class="swiper-slide-img">
+                            <img src="../assets/works/to-do-app.jpg" />
+                        </div>
+                        <div class="swiper-slide-content">
+                            <h3>To-Do<br><span>
+                                    To-Do app written in React.
+                                </span></h3>
+                        </div>
                     </div>
                     <div class="swiper-slide">
-                        <img src="https://swiperjs.com/demos/images/nature-5.jpg" />
-                    </div>
-                    <div class="swiper-slide">
-                        <img src="https://swiperjs.com/demos/images/nature-6.jpg" />
-                    </div>
-                    <div class="swiper-slide">
-                        <img src="https://swiperjs.com/demos/images/nature-7.jpg" />
-                    </div>
-                    <div class="swiper-slide">
-                        <img src="https://swiperjs.com/demos/images/nature-8.jpg" />
-                    </div>
-                    <div class="swiper-slide">
-                        <img src="https://swiperjs.com/demos/images/nature-9.jpg" />
+                        <div class="swiper-slide-img">
+                            <img src="../assets/works/weather-app.jpg" />
+                        </div>
+                        <div class="swiper-slide-content">
+                            <h3>Weather<br><span>
+                                    Weather app written in React.
+                                </span></h3>
+                        </div>
                     </div>
                 </div>
                 <div class="swiper-pagination"></div>
@@ -151,11 +178,11 @@
                 stretch: 0,
                 depth: 100,
                 modifier: 1,
-                slideShadows: true,
+                slideShadows: false,
             },
             loop: true,
             autoplay: {
-                delay: 1500,
+                delay: 2500,
                 disableOnInteraction: false,
             },
         });
