--- a/src/app/index.css
+++ b/src/app/index.css
@@ -336,13 +336,64 @@ section img#mountains_front {
 #swiper .swiper .swiper-slide {
     background-position: center;
     background-size: cover;
-    width: 400px;
+    width: 800px;
     height: 400px;
+    object-fit: scale-down;
 }
 
 #swiper .swiper .swiper-slide img {
     display: block;
+    width: 800px;
+    height: 400px;
     width: 100%;
+}
+
+#swiper .swiper .swiper-slide .swiper-slide-content {
+    position: absolute;
+    bottom: -100px;
+    width: 100%;
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 10;
+    flex-direction: column;
+    backdrop-filter: blur(10px);
+    box-shadow: 0 -10px 10px rgba(0, 0, 0, 0.1);
+    opacity: 0;
+}
+
+#swiper .swiper .swiper-slide:hover .swiper-slide-content {
+    bottom: 0px;
+    opacity: 1;
+}
+
+#swiper .swiper .swiper-slide .swiper-slide-content h3 {
+    text-shadow: -1px 0 #fff, 0 1px #fff, 1px 0 #fff, 0 -1px #fff;
+    color: rgb(0, 0, 0);
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    font-weight: 500;
+    font-size: 18px;
+    text-align: center;
+    margin: 20px 0 15px;
+    line-height: 1.1em;
+    transition: 0.5s;
+    opacity: 0;
+    transform: translateY(-20px);
+}
+
+#swiper .swiper .swiper-slide:hover .swiper-slide-content h3 {
+    opacity: 1;
+    transform: translateY(0px);
+}
+
+#swiper .swiper .swiper-slide .swiper-slide-content h3 span {
+    text-shadow: -0.5px 0 #fff, 0 0.5px #fff, 0.5px 0 #fff, 0 -0.5px #fff;
+    color: rgb(0, 0, 0);
+    font-size: 12px;
+    font-weight: 300;
+    text-transform: initial;
 }
 
 footer {
