--- a/src/app/index.html
+++ b/src/app/index.html
@@ -135,6 +135,16 @@
                                 </span></h3>
                         </div>
                     </div>
+                    <div class="swiper-slide">
+                        <div class="swiper-slide-img">
+                            <img src="../assets/works/Music player.jpg" />
+                        </div>
+                        <div class="swiper-slide-content">
+                            <h3>Music Player<br><span>
+                                    Music Player written in VanilaJS.
+                                </span></h3>
+                        </div>
+                    </div>
                 </div>
                 <div class="swiper-pagination"></div>
             </div>
