--- a/src/app/index.html
+++ b/src/app/index.html
@@ -99,7 +99,7 @@
                         <div class="swiper-slide-content">
                             <h3>Angular-chat
                                 <br> <span>
-                                    description
+                                    Chat written in Angular.
                                 </span>
                             </h3>
                         </div>
@@ -142,6 +142,16 @@
                         <div class="swiper-slide-content">
                             <h3>Music Player<br><span>
                                     Music Player written in VanilaJS.
+                                </span></h3>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="swiper-slide-img">
+                            <img src="../assets/works/Tic-Tac-Toe.jpg" />
+                        </div>
+                        <div class="swiper-slide-content">
+                            <h3>Tic-Tac-Toe<br><span>
+                                    Tic-Tac-Toe game written in Angular.
                                 </span></h3>
                         </div>
                     </div>
